--- a/DesignerRHN/DesignerRHN-war/web/emplvigencianormalaboral.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/emplvigencianormalaboral.xhtml
@@ -58,7 +58,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 728px;  margin: -14px; height: 20px; border: none; color: blue;" id="fooNormaLaboral" action="normaLaboral" value=""/>
+                                        <p:commandButton style="width: 728px;  margin: -14px; height: 20px; border: none; color: blue;" id="fooNormaLaboral" actionListener="#{controlNormasLaborales.recibirPaginaEntrante('emplvigencianormalaboral')}" action="normaLaboral" value=""/>
                                     </f:facet>
                                 </p:column>
 
