--- a/DesignerRHN/DesignerRHN-war/web/Ciudades.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Ciudades.xhtml
@@ -21,7 +21,7 @@
 
                             <p:dataTable id="datosCiudades" var="ciudades" rowKey="#{ciudades.secuencia}" rowIndexVar="indice"                            
                                          value="#{controlCiudades.listaCiudades}" scrollable="true" scrollHeight="#{controlCiudades.altoTabla}" scrollWidth="830"
-                                         style="border: 1px;width: 810px"
+                                         style="border: 1px;width: 810px" liveScroll="true" scrollRows="80"
                                          filteredValue="#{controlCiudades.filtradoListaCiudades}" emptyMessage="#{msg['vacio']}"
                                          editable="true" editMode="cell"
                                          selection="#{controlCiudades.ciudadSeleccionada}" selectionMode="single">
@@ -43,7 +43,6 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['codigo']}" />
                                     </f:facet>
                                 </p:column>
 
@@ -62,7 +61,6 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['nombre']}" />
                                     </f:facet>
                                 </p:column>
 
@@ -79,7 +77,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px; border: none; color: blue" id="fooDepartamentos" value="#{msg['departamento']}"/>
+                                        <p:commandButton style="width: 315px; margin: -14px; height: 26px; border: none; color: blue" value=" " id="fooDepartamentos" />
                                     </f:facet>
                                 </p:column>
                                 <p:column headerText="#{msg['codigoalternativo']}" sortBy="#{ciudades.codigoalternativo}" filterBy="#{ciudades.codigoalternativo}" filterMatchMode="contains" id="ciudadesCodigosAlternativos" width="50" filterStyle="display: none; visibility: hidden;" >                                  
@@ -94,7 +92,6 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['codigoalternativo']}" />
                                     </f:facet>
                                 </p:column>
                             </p:dataTable>
@@ -145,9 +142,9 @@
                             </p:toolbarGroup>  
                         </p:toolbar>
 
-                        <p:commandButton style="position: absolute; left: 688px; top: 470px;" icon="ui-icon-check" id="ACEPTAR" value="#{msg['aceptar']}" onclick="confirmarGuardar.show();" disabled="#{controlCiudades.guardado}" update=":form:datosCiudades" process="@this" />
+                        <p:commandButton style="position: absolute; left: 683px; top: 470px;" icon="ui-icon-check" id="ACEPTAR" value="#{msg['aceptar']}" onclick="confirmarGuardar.show();" disabled="#{controlCiudades.guardado}" update=":form:datosCiudades" process="@this" />
                         <p:commandButton style="position: absolute; left: 15px; top: 470px;" icon="ui-icon-refresh" id="REFRESCAR" value="#{msg['refrescar']}" actionListener="#{controlCiudades.cancelarModificacion()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 785px; top: 470px;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="#{msg['atras']}" actionListener="#{controlCiudades.salir()}" action="#{controlCiudades.redirigir()}" process="@this" />
+                        <p:commandButton style="position: absolute; left: 775px; top: 470px;" icon="ui-icon-closethick" id="ATRAS" value="#{msg['atras']}" actionListener="#{controlCiudades.salir()}" action="#{controlCiudades.redirigir()}" process="@this" />
 
                     </p:panel>
 
