--- a/DesignerRHN/DesignerRHN-war/web/EmplSets.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplSets.xhtml
@@ -102,7 +102,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['inicial']}" />
+                                        <h:outputText value="" />
                                     </f:facet>
                                 </p:column>
 
@@ -123,7 +123,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['final']}" />
+                                        <h:outputText value="" />
                                     </f:facet>
                                 </p:column>
 
@@ -142,7 +142,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['porcentaje']}" />
+                                        <h:outputText value="" />
                                     </f:facet>
                                 </p:column>
 
@@ -158,7 +158,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['promedio']}" />
+                                        <h:outputText value="" />
                                     </f:facet>
                                 </p:column>
 
@@ -174,7 +174,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['tiposet']}" />
+                                        <h:outputText value="" />
                                     </f:facet>
                                 </p:column>
 
@@ -193,7 +193,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <h:outputText value="#{msg['totalingreso']}" />
+                                        <h:outputText value="" />
                                     </f:facet>
                                 </p:column>
                             </p:dataTable>  
@@ -280,7 +280,7 @@
                         <p:panel id="nuevoSet" style="border: none;">
 
 
-                            <strong><h:outputText value="#{msg['inicialN']}" style=" position: absolute; top: 85px; left: 50px;" /></strong>
+                            <strong><h:outputText value="*#{msg['inicialN']}" style=" position: absolute; top: 85px; left: 50px;" /></strong>
                             <div id="posicionFormulaFechaIniNuevoReg" style=" position: absolute; top: 80px; left: 170px">
                                 <lnk:calendar id="nuevaFechaInicial" value="#{controlSets.nuevoSet.fechainicial}" >
                                     <p:ajax event="dateSelect" update="nuevaFechaInicial" process="@this"/>
@@ -301,11 +301,11 @@
                                 <p:ajax event="change" update="nuevoPorcentaje"/>
                             </p:inputText>
 
-                            <strong><h:outputText value="#{msg['promedioN']}" style=" position: absolute; top: 205px; left: 50px" /></strong>
+                            <strong><h:outputText value="*#{msg['promedioN']}" style=" position: absolute; top: 205px; left: 50px" /></strong>
                             <p:inputText id="nuevoPromedio" value="#{controlSets.nuevoSet.promedio}" style=" width: 122px; position: absolute; left: 170px; top: 200px;">
                                 <p:ajax event="change" update="nuevoPromedio"/>
                             </p:inputText>
-                            <strong><h:outputText value="#{msg['tiposetN']}" style=" position: absolute; top: 245px; left: 50px" /></strong>
+                            <strong><h:outputText value="*#{msg['tiposetN']}" style=" position: absolute; top: 245px; left: 50px" /></strong>
                             <p:inputText id="nuevoTipoSet" value="#{controlSets.nuevoSet.tiposet}" style=" width: 122px; position: absolute; left: 170px; top: 240px;">
                                 <p:ajax event="change" update="nuevoTipoSet"/>
                             </p:inputText>
@@ -326,7 +326,7 @@
 
                         <p:panel id="duplicarSet" style="border: none;">
 
-                            <strong><h:outputText value="#{msg['inicialN']}" style=" position: absolute; top: 85px; left: 50px;" /></strong>
+                            <strong><h:outputText value="*#{msg['inicialN']}" style=" position: absolute; top: 85px; left: 50px;" /></strong>
                             <div id="posicionFormulaFechaIniDupliReg" style=" position: absolute; top: 80px; left: 170px">
                                 <lnk:calendar id="duplicarFechaInicial" value="#{controlSets.duplicarSet.fechainicial}" >
                                     <p:ajax event="dateSelect" update="duplicarFechaInicial" process="@this"/>
@@ -346,12 +346,12 @@
                                 <p:ajax event="change" update="duplicarPorcentaje"/>
                             </p:inputText>
 
-                            <strong><h:outputText value="#{msg['promedioN']}" style=" position: absolute; top: 205px; left: 50px" /></strong>
+                            <strong><h:outputText value="*#{msg['promedioN']}" style=" position: absolute; top: 205px; left: 50px" /></strong>
                             <p:inputText id="duplicarPromedio" value="#{controlSets.duplicarSet.promedio}" style=" width: 122px; position: absolute; left: 170px; top: 200px;">
                                 <p:ajax event="change" update="duplicarPromedio"/>
                             </p:inputText>
 
-                            <strong><h:outputText value="#{msg['tiposetN']}" style=" position: absolute; top: 245px; left: 50px" /></strong>
+                            <strong><h:outputText value="*#{msg['tiposetN']}" style=" position: absolute; top: 245px; left: 50px" /></strong>
                             <p:inputText id="duplicarTipoSet" value="#{controlSets.duplicarSet.tiposet}" style=" width: 122px; position: absolute; left: 170px; top: 240px;">
                                 <p:ajax event="change" update="duplicarTipoSet"/>
                             </p:inputText>
