--- a/DesignerRHN/DesignerRHN-war/web/perreferencialaboral.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/perreferencialaboral.xhtml
@@ -110,7 +110,7 @@
                                 <p:tooltip style="" for="exportarXLS" value="Exportar a XLS" />
 
                                 <p:commandButton id="exportarXML" value="" style="background-image: url(Imagenes/XML.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlHvReferencias.limpiarNuevoHvReferencias()}"  ajax="false">
-                                    <p:dataExporter type="xml"  target=":formExportar:datosHvReferenciaExportar" fileName="REFERENCIASPERSONALES" encoding="UTF-8"/> 
+                                    <p:dataExporter type="xml"  target=":formExportar:datosHvReferenciaExportar" fileName="HVREFERENCIAS" encoding="UTF-8"/> 
                                 </p:commandButton> 
                                 <p:tooltip style="" for="exportarXML" value="Exportar a XML" />
 
